--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,20 @@
 <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
+		        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                		<span class="sr-only">Toggle navigation</span> 
+		                <span class="icon-bar"></span> 
+                		<span class="icon-bar"></span> 
+                		<span class="icon-bar"></span>
+           		</button>	
 			<a id="mounts-logo" class="navbar-brand" href="/">MOUNTS</a>
 		</div>
-		<ul class="nav navbar-nav">
-			<li><a href="/targets"><i class="glyphicon glyphicon-picture"></i> volcanoes</a></li>
-			<li><a href="/about"><i class="glyphicon glyphicon-pencil"></i> about</a></li>
-		</ul>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav">
+				<li><a href="/targets"><i class="glyphicon glyphicon-picture"></i> volcanoes</a></li>
+				<li><a href="/about"><i class="glyphicon glyphicon-pencil"></i> about</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
 {% endblock %}
