--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
 		<!-- 	width (columns) = 3/12 columns (12 needed in bootstrap grid row) -->
 		<!-- 	width (vNav) = 10% of container full width -->
 		<!-- 	tgt_stats = variable passed in render_template("tgt.html", ...) -->
-		<div class="col-xs-12 col-md-3">
+		<div class="col-xs-12 col-md-3 hidden-sm hidden-xs">
 			<ul id="vNav" class="nav nav-pills nav-stacked" style="width:10%;position:fixed;">
 				<li>
 					<table class="table-condensed" style="width: 100%">
