--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,9 @@
 
 {% block page_content %}
 
-    <img src="{{url_for('static', filename='images/mounts.png')}}" style="width:30%" align="middle">
-	
-	<h3>Monitoring Unrest From Space</h3>
+          <div class="text-center">
+          	<img src="{{url_for('static', filename='images/mounts.png')}}" style="width:50%">
+		<p style="font-size:40px">Monitoring Unrest From Space</p>
+          </div>  
 
 {% endblock %}
