--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,9 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="/targets"><i class="glyphicon glyphicon-picture"></i> volcanoes</a></li>
-				<li><a href="/about"><i class="glyphicon glyphicon-pencil"></i> about</a></li>
+				<li><a href="/targets"><i class="glyphicon glyphicon-map-marker"></i> Volcanoes</a></li>
+				<li><a href="/earthquakes"><i class="glyphicon glyphicon-flash"></i> Earthquakes</a></li>
+				<li><a href="/about"><i class="glyphicon glyphicon-pencil"></i> About</a></li>
 			</ul>
 		</div>
 	</div>
