--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,9 @@
 		<!-- 	width (columns) = 3/12 columns (12 needed in bootstrap grid row) -->
 		<!-- 	width (vNav) = 10% of container full width -->
 		<!-- 	tgt_stats = variable passed in render_template("tgt.html", ...) -->
-		<div class="col-xs-12 col-md-3 hidden-sm hidden-xs">
+
+		<!-- TODO: hidden-xs means that on cells the left column is hidden, must change this so that it is possible to change to timeseries -->
+		<div class="col-xs-12 col-sm-3 col-md-3 hidden-xs">
 			<ul id="vNav" class="nav nav-pills nav-stacked" style="width:10%;position:fixed;">
 				<li>
 					<table class="table-condensed" style="width: 100%">
@@ -61,7 +63,7 @@
 
 		<!-- RIGHT column -->
 		<!-- width (columns) = 9/12 columns (12 needed in bootstrap grid row) -->
-		<div class="col-xs-12 col-md-9">
+		<div class="col-xs-12 col-sm-9 col-md-9">
 			{% block latest_images %}
 			{% endblock %}
 		</div>
