--- a/templates/volcano.html
+++ b/templates/volcano.html
@@ -5,76 +5,71 @@
 	{{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/poptroxstyle.css') }}">
     <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/jquery.poptrox.min.js') }}"></script>		
+    <script src="{{ url_for('static', filename='js/jquery.poptrox.min.js') }}"></script>
 {% endblock %}
 
+<!-- macro to link image -->
+{% macro imglink(imgpath='', imgtitle='') -%}
+	<a href="{{url_for('static', filename=imgpath, _external=True)}}" target="_blank"> 
+		<img src="{{url_for('static', filename=imgpath|replace('.png','_thumb.png'))}}" width="100%"
+		title="{{ imgtitle }}"/>
+	</a>
+{%- endmacro %}
 
+<!-- image block -->
 {% block latest_images %}
 
-	<!-- loop through S1 image list, grouped by acquisition time -->
-	{% for group in imgS1|groupby('acqstarttime')|reverse %}
+	{% for D in img_groups %}
 		<div class="row poptroxImages">
 
-			<!-- loop through S1 images in a group -->
-			{% for imgS1 in group.list %}
+			<!-- intensity -->
+			<div class="col-md-3 seb_nopadding">
+				{{ D['groupdate'].strftime('%Y-%m-%d %H:%M') }}
 
-				<!-- define cell (width=3col) -->
-				<div class="col-md-3 seb_nopadding">
-
-					<!-- add acquisition time if first iteration -->
-					{% if loop.first %}
-						<p style="margin-top:0; margin-bottom:0"> {{ group.grouper.strftime('%Y-%m-%d %H:%M') }} </p>
-					{% else %}
-						<br>
-					{% endif %}
-
-					<!-- define image title -->
-					{% if imgS1.type == 'ifg' %}
-						{% set imgtitle = "interferogram" %}
-					{% elif imgS1.type == 'coh' %}
-						{% set imgtitle = "coherence" %}
-					{% endif %}
-
-					<!-- display thumbnail image with link to full resolution image -->
-					<a href="{{url_for('static', filename=imgS1.abspath, _external=True)}}" target="_blank"> 
-						<img src="{{url_for('static', filename=imgS1.abspath|replace('.png','_thumb.png'))}}" width="100%"
-							title="{{ imgtitle }}"/>
-					</a>
-
-				</div>
-			{% endfor %}
-
-
-			<!-- loop through S2 images -->
-			{% for nir in imgS2 %}
-
-				<!-- add S2 image if acq time < 10 days from S1 acq time -->
-				{% if (nir.acqstarttime - group.grouper)|abs < 5|int2td('days') %}
-					<div class="col-md-3 seb_nopadding">
-						
-						<!-- add date (and time difference with respect to slave image) -->
-						<p style="margin-top:0; margin-bottom:0"> {{ nir.acqstarttime.strftime('%Y-%m-%d %H:%M') }} ({{ '%+.1f' % (nir.acqstarttime - group.grouper)|td2int('days')|round(1) }} days) </p>
-
-						<!-- define image title -->
-						{% if nir.type == 'nir' %}
-							{% set imgtitle = "near infrared (B12-B11-B8A)" %}
-						{% else %}
-							{% set imgtitle = nir.type %}
-						{% endif %}
-
-						<!-- display thumbnail image with link to full resolution image -->
-						<a href="{{url_for('static', filename=nir.abspath, _external=True)}}" target="_blank"> 
-							<img src="{{url_for('static', filename=nir.abspath|replace('.png','_thumb.png'))}}" width="100%"
-								title="{{ imgtitle }}"/>
-						</a>
-
-					</div>
+				{% if 'int_VV' in D['type'] %}
+					{% set idx = D['type'].index('int_VV') %}
+					{% set imgtitle = "intensity, VV (" + D['acqstarttime_master'][idx].strftime('%Y-%m-%d') + ")" %}
+					{{ imglink(imgpath=D['abspath'][idx], imgtitle=imgtitle) }}
 				{% endif %}
-			{% endfor %}
+			</div>
+
+			<!-- interferogram -->
+			<div class="col-md-3 seb_nopadding">
+				&nbsp;
+
+				{% if 'ifg' in D['type'] %}
+					{% set idx = D['type'].index('ifg') %}
+					{% set imgtitle = "interferogram (" + D['acqstarttime_master'][idx].strftime('%Y-%m-%d') + " - " + D['acqstarttime_slave'][idx].strftime('%Y-%m-%d') + ")" %}
+					{{ imglink(imgpath=D['abspath'][idx], imgtitle=imgtitle) }}
+				{% endif %}
+			</div>
+
+			<!-- coherence -->
+			<div class="col-md-3 seb_nopadding">
+				&nbsp;
+
+				{% if 'coh' in D['type'] %}
+					{% set idx = D['type'].index('coh') %}
+					{% set imgtitle = "coherence (" + D['acqstarttime_master'][idx].strftime('%Y-%m-%d') + " - " + D['acqstarttime_slave'][idx].strftime('%Y-%m-%d') + ")" %}
+					{{ imglink(imgpath=D['abspath'][idx], imgtitle=imgtitle) }}
+				{% endif %}
+			</div>
+
+			<!-- infrared -->
+			{% if 'nir' in D['type'] %}
+				{% set idx = D['type'].index('nir') %}
+				
+				<div class="col-md-3 seb_nopadding">
+					{{ D['acqstarttime_master'][idx].strftime('%Y-%m-%d %H:%M') }} ({{ '%+.1f' % D['dt']|td2int('days')|round(1) }} days)
+
+					{% set imgtitle = "near infrared, B12-B11-B8A (" + D['acqstarttime_master'][idx].strftime('%Y-%m-%d') + ")" %}
+					{{ imglink(imgpath=D['abspath'][idx], imgtitle=imgtitle) }}
+				</div>
+				{% endif %}
 
 		</div>
-	{% endfor %}
 
+	{% endfor %}
 
 	<script>
 		var poptroxImages = $(".poptroxImages")
@@ -89,5 +84,6 @@
 	</script> 
 
 {% endblock %}
+
 
 
