--- a/templates/about.html
+++ b/templates/about.html
@@ -5,8 +5,8 @@
 
 	<h3>MOUNTS</h3>
 	<br>
-	<p> MOUNTS is a near real-time monitoring system of volcanoes and earthquakes, based on the analysis of <a href="https://sentinel.esa.int/web/sentinel/home">Sentinel</a> data. </p>
+	<p class="text-justify"> MOUNTS is a near real-time monitoring system of volcanoes and earthquakes, based on the analysis of <a href="https://sentinel.esa.int/web/sentinel/home">Sentinel</a> data. </p>
 	<br>
-	<p> The project is funded by <a href="https://www.geo-x.net/en/">GEO.X</a> and lead by <a href="https://www.geo-x.net/young-academy/fellows/sebastien-valade/">S&eacute;bastien Valade</a>, in partnership with TU-Berlin (<a href="http://www.cv.tu-berlin.de/menue/computer_vision_remote_sensing/">Computer Vision & Remote Sensing</a> group) and GFZ (<a href="http://www.gfz-potsdam.de/en/section/physics-of-earthquakes-and-volcanoes/">Physics of Earthquakes and Volcanoes</a> section). </p>
+	<p class="text-justify"> The project is funded by <a href="https://www.geo-x.net/en/">GEO.X</a> and lead by <a href="https://www.geo-x.net/young-academy/fellows/sebastien-valade/">S&eacute;bastien Valade</a>, in partnership with TU-Berlin (<a href="http://www.cv.tu-berlin.de/menue/computer_vision_remote_sensing/">Computer Vision & Remote Sensing</a> group) and GFZ (<a href="http://www.gfz-potsdam.de/en/section/physics-of-earthquakes-and-volcanoes/">Physics of Earthquakes and Volcanoes</a> section). </p>
 
 {% endblock %}
